--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -6,13 +6,6 @@
   gap: 5px;
 }
 
-.loading-text {
-  color: white;
-  font-size: 30pt;
-
-  margin-left: 10px;
-}
-
 .dot {
   margin-left: 3px;
   animation: blink 1.5s infinite;
@@ -62,11 +55,7 @@
 
 .white-bar {
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    -45deg,
-    rgb(21, 21, 21) 0%,
-    rgba(255, 255, 255, 0) 70%
-  );
+  background: linear-gradient(to bottom right, #14532d, #16a34a, #14532d);
   width: 10px;
   height: 45px;
   opacity: 0.3;
